# bersama

./: .gitignore  AGENTS.md  CONTEXT.md  ECOSYSTEM.md  README.md  pyproject.toml  run-state.json  saringan.toml  skills-lock.json
.commandcode/taste/: taste.md
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.css  App.test.tsx  App.tsx  index.css
docs/: hakim_judge_layer_plan.md  interactive-control-center-proposal.md  metrics-telemetry-recommendations.md  social_post_drafts.md  sprint1.md  ux_robustness_proposal.md
docs/adr/: 0001-prd-branch-integration.md  0002-github-issues-as-orchestration-state.md  0003-serialize-prd-branch-integration.md  0004-lock-shared-repository-operations.md  0005-pull-request-integration-and-scalable-polling.md  0006-bound-external-orchestration-commands.md  (+3 more)
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
quality-gate-inputs/: conventions.md  issue.md  judge.result.json  judge.stderr  validate.result.json  validate.stderr
scripts/: saringan-quality-gate.sh
src/bersama/: __init__.py  (+19 more)
tests/: test_claiming.py  test_cli.py  test_command_executor.py  test_config.py  test_dashboard.py  test_discord_notifier.py  test_event_bus.py  test_execution.py  test_file_watcher.py  test_github_issues.py  test_integration.py  test_issue_parser.py  test_orchestrator.py  test_pi_rpc_harness.py  test_planner.py  test_prd_preparation.py  test_quality_gate.py  test_reconciliation.py  test_repo_lock.py  test_scheduling_readiness.py  test_telemetry.py
(+60 files in other folders)
