[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bersama"
version = "0.1.0"
description = "Standalone orchestrator scaffold for config-driven agent runs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "langgraph>=0.1.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.24.0",
]

[project.scripts]
bersama = "bersama.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
