[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rangkai"
version = "0.1.0"
description = "Standalone orchestrator scaffold for config-driven agent runs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "langgraph>=0.1.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
  "sse-starlette>=2.1.3",
  "watchfiles>=1.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.24.0",
]

[project.scripts]
rangkai = "rangkai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
